--- a/gateway/internal/config/config.example.yaml
+++ b/gateway/internal/config/config.example.yaml
@@ -1,10 +1,1 @@
-env: local
-currency:
-  base: rub
-  target: usd
-database:
-  host: localhost
-  port: 5432
-  user: test
-  password: password
-  database: test
+auth_url: http://localhost:8082
